--- a/ShopFlowers/users/templates/password_change_done.html
+++ b/ShopFlowers/users/templates/password_change_done.html
@@ -13,7 +13,7 @@
 
     <div class="overlay">
         <h2 class="form-title">Пароль успешно изменен</h2>
-        <a href="{% url 'profile' %}"><button class="password-change">ОК</button></a>
+        <a href="{% url 'user:profile' %}"><button class="password-change">ОК</button></a>
     </div>
 
 </section>
