--- a/ShopFlowers/users/templates/password_reset_form.html
+++ b/ShopFlowers/users/templates/password_reset_form.html
@@ -11,7 +11,7 @@
 <section class="popup">
     <div class="overlay">
         <h2 class="form-title">Восстановление пароля</h2>
-        <form method="post" action="{% url 'password_reset' %}">
+        <form method="post" action="{% url 'user:password_reset' %}">
             {% csrf_token %}
             {% for form_reset in form %}
                 {{ form_reset }}
