--- a/ShopFlowers/feedback/templates/edit_feedback.html
+++ b/ShopFlowers/feedback/templates/edit_feedback.html
@@ -13,7 +13,7 @@
             <img src="{{ feedback.flowers.image.url }}" width="180px" height="200px">
         </div>
 
-        <form action="{% url 'edit-feedback' feedback.id %}" method="post" enctype="multipart/form-data">
+        <form action="{% url 'feedback:edit-feedback' feedback.id %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
             <div class="feedback-form-rating">
                 <button class="star" id="one" value="1">&#9733;</button>
@@ -50,7 +50,7 @@
 
             <div class="feedback-button">
                 <button type="submit" class="redaction-feedback">Сохранить</button>
-                <button class="exit-feedback"><a href="{% url 'feedback-profile' %}">Назад</a></button>
+                <button class="exit-feedback"><a href="{% url 'feedback:feedback-profile' %}">Назад</a></button>
             </div>
 
             {% if form.errors %}
