--- a/ShopFlowers/flowers/static/css/flower_style.css
+++ b/ShopFlowers/flowers/static/css/flower_style.css
@@ -32,7 +32,7 @@
     border-bottom: 2px solid rgba(67, 102, 205, 0);
 }
 
-/* Карточка со свойствами и кнопкой для корзины */
+/* Карточка с фото свойствами и кнопкой для корзины */
 .flower-list {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -48,7 +48,6 @@
 /* Фото товара */
 .flower-img{
     grid-column: 1;
-
 }
 
 .flower-img img{
@@ -61,7 +60,7 @@
 	position: absolute; /*Для ленточки относительно flower-list*/
 	left: 600px;
 	top: 185px;
-	filter: drop-shadow(2px 3px 2px rgba(15, 15, 15, 1));
+	filter: drop-shadow(2px 3px 2px rgba(15, 15, 15, 1)); /*отбрасывания тени к входному изображению.*/
 }
 
 .product-discount span {
@@ -276,3 +275,97 @@ button.prev {
     left: 25%;
 }
 
+
+@media screen and (min-width: 800px) and (max-width: 1175px){
+    .breadcrumb {
+        margin-left: 200px;
+    }
+
+    .flower-list {
+        margin: 0 10% 0 10%;
+    }
+
+    .flower-img img{
+        width: 350px;
+        height: 400px;
+    }
+
+    .product-discount {
+        position: absolute; /*Для ленточки относительно flower-list*/
+        left: 300px;
+        filter: drop-shadow(2px 3px 2px rgba(15, 15, 15, 1));
+    }
+
+    .product-discount span {
+        width: 80px;
+        line-height: 15px;
+    }
+
+    .flower-text {
+        font-size: 8pt;
+    }
+}
+
+@media screen and (max-width: 799px){
+    .breadcrumb {
+        margin-left: 50px;
+    }
+
+    .flower-list {
+        margin: 0 5% 0 5%;
+    }
+
+    .flower-img img{
+        width: 150px;
+        height: 200px;
+    }
+
+    .product-discount {
+        position: absolute; /*Для ленточки относительно flower-list*/
+        left: 120px;
+        filter: drop-shadow(2px 3px 2px rgba(15, 15, 15, 1));
+    }
+
+    .product-discount span {
+        width: 50px;
+        line-height: 5px;
+        font-size: 6pt;
+    }
+
+    .flower-property {
+        margin-left: 20px;
+        width: 200px;
+    }
+
+    .flower-text {
+        font-size: 6pt;
+    }
+
+    .p-price {
+        font-size: 6pt;
+    }
+    
+    .p-price-discount {
+        font-size: 8pt;
+    }
+
+    .cart-button {
+        padding: 5px 7px 5px 7px;
+        font-size: 8px;
+    }
+    
+    .cart-button:hover {
+        padding: 5px 7px 5px 7px;
+        font-size: 8px;
+    }
+
+    .carousel {
+        display: none;
+    }
+    .feedback-count-rating-mean {
+        padding-top: -25px;
+        font-size: 8pt;    
+    }
+
+
+}
