--- a/ShopFlowers/flowers/static/css/main_page.css
+++ b/ShopFlowers/flowers/static/css/main_page.css
@@ -67,3 +67,86 @@ body {
 }
 
 
+@media screen and (min-width: 800px) and (max-width: 1175px){
+	.home {
+		grid-template-rows: repeat(7, 1fr);
+		height: 1600px;
+	}
+	
+	.start {
+		grid-column: 1 / span 3;
+		grid-row: 1 / span 2;
+	}
+	
+	.hit {
+		grid-column: 1 / span 3;
+		grid-row: 3;
+	}
+	
+	.novelty {
+		grid-column: 1 / 1;
+		grid-row: 4 / span 2;
+	}
+	
+	.catalog {
+		grid-column: 2 / span 2;
+		grid-row: 4 / span 1;
+	}
+	
+	.sale {
+		grid-column: 1 / 1;
+		grid-row: 6 / span 2;
+	}
+	
+	.design {
+		grid-column: 2 / 2;
+		grid-row: 5 / span 3;
+	}
+	
+	.other {
+		grid-column: 3 / 3;
+		grid-row: 5 / span 3;
+	}
+}
+
+@media screen and (max-width: 799px){
+	.home {
+		grid-template-rows: repeat(5, 1fr);
+		height: 600px;
+	}
+	
+	.start {
+		grid-column: 1 / span 3;
+		grid-row: 1/ span 2;
+	}
+	
+	.hit {
+		grid-column: 1 / span 3;
+		grid-row: 3;
+	}
+	
+	.novelty {
+		grid-column: 1 / 1;
+		grid-row: 4;
+	}
+	
+	.catalog {
+		grid-column: 2 / span 2;
+		grid-row: 4;
+	}
+	
+	.sale {
+		grid-column: 1 / 1;
+		grid-row: 5;
+	}
+	
+	.design {
+		grid-column: 2 / 2;
+		grid-row: 5;
+	}
+	
+	.other {
+		grid-column: 3 / 3;
+		grid-row: 5;
+	}
+}
