--- a/ShopFlowers/flowers/templates/care.html
+++ b/ShopFlowers/flowers/templates/care.html
@@ -12,11 +12,11 @@
             <p class="p1">Каталог</p>
             <div class="list-cat">
                 <div class="cat-plant" style="border-bottom: 1px solid rgba(114, 121, 88, 1);">
-                    <a href="{% url 'flowers' %}">Комнатные растения</a>
+                    <a href="{% url 'flowers:flowers' %}">Комнатные растения</a>
                 </div>
 
                 <div class="cat-pots" style="border-bottom: 1px solid rgba(114, 121, 88, 1);">
-                    <a href="{% url 'pots' %}">Горшки и кашпо</a>
+                    <a href="{% url 'flowers:pots' %}">Горшки и кашпо</a>
                 </div>
 
                 <div class="cat-care" style="
@@ -24,7 +24,7 @@
                     border-top-left-radius: 20px;
                     border-top-right-radius: 20px;
                     border-bottom: none;">
-                    <a href="{% url 'care' %}">Уход за растениями</a>
+                    <a href="{% url 'flowers:care' %}">Уход за растениями</a>
                 </div>
             </div>
         </div>
@@ -32,15 +32,15 @@
 
     <div class="breadcrumb">
         <ul>
-            <li class="breadcrumb_item"><a href="{% url 'main' %}">Главная /</a></li>
-            <li class="breadcrumb_item"><a href="{% url 'flowers' %}">Уход за растениями /</a></li>
+            <li class="breadcrumb_item"><a href="{% url 'flowers:main' %}">Главная /</a></li>
+            <li class="breadcrumb_item"><a href="{% url 'flowers:care' %}">Уход за растениями /</a></li>
         </ul>
     </div>
 
     <section class="shop">
         <div class="filters">
             <p>Фильтры</p>
-<!--            <form action="{% url 'filter' %}" method="get">-->
+<!--            <form action="{% url 'flowers:filter' %}" method="get">-->
                 <div class="filter-cat">
                 {% for category in view.get_category %}
                 <li>
@@ -72,16 +72,28 @@
         <div class="flowers-list" id="flowers-list-id">
             {% for care in cares %}
             <div class="flower">
-                {% if care.is_discount %}
-                    <a href="{% url 'flower' slug=care.slug %}">
-                        <img src="{{ care.image.url }}">
-                    </a>
-                    <div class="product-discount"><span>{{ care.discount.percent }}%</span></div>
-                {% else %}
-                    <a href="{% url 'flower' slug=care.slug %}">
-                        <img src="{{ care.image.url }}">
-                    </a>
-                {% endif %}
+                <div class="flower-img">
+                    {% if care.is_discount %}
+                        <a href="{% url 'flowers:flower' slug=care.slug %}">
+                            <img src="{{ care.image.url }}" width="250px" height="300px">
+                        </a>
+                        <div class="product-discount"><span>{{ care.discount.percent }}%</span></div>
+                    {% else %}
+                        <a href="{% url 'flowers:flower' slug=care.slug %}">
+                            <img src="{{ care.image.url }}" width="250px" height="300px">
+                        </a>
+                    {% endif %}
+
+<!--                    <div class="flower-favourite">-->
+<!--                        <button id="add-favourite">-->
+<!--                            <img src="{% static 'icons/add_favorite.png' %}" width="20px" height="20px" data-product-id="{{ care.id }}">-->
+<!--                        </button>-->
+
+<!--                        <button hidden="hidden" id="delete-favourite">-->
+<!--                            <img src="{% static 'icons/delete_favourites.png' %}" width="20px" height="20px" data-product-id="care.id">-->
+<!--                        </button>-->
+<!--                    </div>-->
+                </div>
 
                 <div class="flower-detail">
                     <p class="p-text">{{ care.title }}</p>
@@ -95,7 +107,7 @@
                     {% endif %}
 
                     {% if care.quantity > 0 %}
-                        <a href="{% url 'add-cart' care.id %}" class="cart-button">Добавить в корзину</a>
+                        <a href="{% url 'cart:add-cart' care.id %}" class="cart-button">Добавить в корзину</a>
                     {% else %}
                         <p style="margin: 5px;">Нет в наличии</p>
                     {% endif %}
@@ -116,6 +128,6 @@
     </section>
 
 
-<script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="{% static 'js/flowers.js' %}"></script>
 {% endblock base_content %}
