--- a/ShopFlowers/flowers/templates/pots.html
+++ b/ShopFlowers/flowers/templates/pots.html
@@ -12,7 +12,7 @@
             <p class="p1">Каталог</p>
             <div class="list-cat">
                 <div class="cat-plant" style="border-bottom: 1px solid rgba(114, 121, 88, 1);">
-                    <a href="{% url 'flowers' %}">Комнатные растения</a>
+                    <a href="{% url 'flowers:flowers' %}">Комнатные растения</a>
                 </div>
 
                 <div class="cat-pots" style="
@@ -20,11 +20,11 @@
                     border-top-left-radius: 20px;
                     border-top-right-radius: 20px;
                     border-bottom: none;">
-                    <a href="{% url 'pots' %}">Горшки и кашпо</a>
+                    <a href="{% url 'flowers:pots' %}">Горшки и кашпо</a>
                 </div>
                     
                 <div class="cat-care" style="border-bottom: 1px solid rgba(114, 121, 88, 1);">
-                    <a href="{% url 'care' %}">Уход за растениями</a>
+                    <a href="{% url 'flowers:care' %}">Уход за растениями</a>
                 </div>
             </div>
         </div>
@@ -32,15 +32,15 @@
 
     <div class="breadcrumb">
         <ul>
-            <li class="breadcrumb_item"><a href="{% url 'main' %}">Главная /</a></li>
-            <li class="breadcrumb_item"><a href="{% url 'flowers' %}">Горшки и кашпо /</a></li>
+            <li class="breadcrumb_item"><a href="{% url 'flowers:main' %}">Главная /</a></li>
+            <li class="breadcrumb_item"><a href="{% url 'flowers:flowers' %}">Горшки и кашпо /</a></li>
         </ul>
     </div>
 
     <section class="shop">
         <div class="filters">
             <p>Фильтры</p>
-<!--            <form action="{% url 'filter' %}" method="get">-->
+<!--            <form action="{% url 'flowers:filter' %}" method="get">-->
                 <div class="filter-cat">
                 {% for category in view.get_category %}
                 <li>
@@ -73,13 +73,13 @@
             {% for pot in pots %}
                 <div class="flower">
                     {% if pot.is_discount %}
-                        <a href="{% url 'flower' slug=pot.slug %}">
-                            <img src="{{ pot.image.url }}">
+                        <a href="{% url 'flowers:flower' slug=pot.slug %}">
+                            <img src="{{ pot.image.url }}" width="250px" height="300px">
                         </a>
                         <div class="product-discount"><span>{{ pot.discount.percent }}%</span></div>
                     {% else %}
-                        <a href="{% url 'flower' slug=pot.slug %}">
-                            <img src="{{ pot.image.url }}">
+                        <a href="{% url 'flowers:flower' slug=pot.slug %}">
+                            <img src="{{ pot.image.url }}" width="250px" height="300px">
                         </a>
                     {% endif %}
                     
@@ -95,7 +95,7 @@
                         {% endif %}   
                          
                         {% if pot.quantity > 0 %}
-                            <a href="{% url 'add-cart' pot.id %}" class="cart-button">Добавить в корзину</a>
+                            <a href="{% url 'cart:add-cart' pot.id %}" class="cart-button">Добавить в корзину</a>
                         {% else %}
                             <p style="margin: 5px;">Нет в наличии</p>
                         {% endif %}
