--- a/ShopFlowers/users/templates/password_change_form.html
+++ b/ShopFlowers/users/templates/password_change_form.html
@@ -13,7 +13,7 @@
 
     <div class="overlay">
         <h2 class="form-title">{{ title }}</h2>
-        <form method="post" action="{% url 'password-change' %}">
+        <form method="post" action="{% url 'user:password-change' %}">
             {% csrf_token %}
             <div class="form-error">{{ form.non_field_errors }}</div>
             <div class="change">
@@ -23,7 +23,7 @@
                 {% endfor %}
             </div>
             <button class="password-change" type="submit">Сменить пароль</button>
-            <a href="{% url 'profile' %}"><button class="password-change">Выйти</button></a>
+            <a href="{% url 'user:profile' %}"><button class="password-change">Выйти</button></a>
         </form>
     </div>
 
