--- a/ShopFlowers/users/templates/password_reset_complete.html
+++ b/ShopFlowers/users/templates/password_reset_complete.html
@@ -14,7 +14,7 @@
         <h2 class="form-title">Пароль изменен</h2><br><br><br>
 
         <p>Поздравляем! Вы успешно изменили пароль своего аккаунта. Используйте его для
-          <a href="{% url 'login' %}">авторизации</a>.</p>
+          <a href="{% url 'user:login' %}">авторизации</a>.</p>
     </div>
 </section>
 
