--- a/ShopFlowers/users/templates/password_reset_done.html
+++ b/ShopFlowers/users/templates/password_reset_done.html
@@ -17,10 +17,8 @@
         Если вы не получили электронное письмо, пожалуйста, убедитесь,
         что вы указали адрес, на который указывали при регистрации, и проверьте папку со спамом.</p>
 
-        <a href="{% url 'main' %}"><button class="password-change">ОК</button></a>
+        <a href="{% url 'flowers:main' %}"><button class="password-change">ОК</button></a>
     </div>
-
-
 </section>
 
 {% endblock base_content %}
